@startuml

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title Order Dynamic Price Strategy Decorator - Architecture

package "Contracts" {
    interface PricingStrategyInterface {
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
    }

    interface OrderRepositoryInterface {
        +findById(id: int): Order
        +save(order: Order): void
    }

    interface SellerRepositoryInterface {
        +findById(id: int): Seller
        +save(seller: Seller): void
    }

    interface CategoryRepositoryInterface {
        +findById(id: int): Category
    }

    interface LocationRepositoryInterface {
        +findById(id: int): Location
    }

    interface PriceRuleRepositoryInterface {
        +findById(id: int): PriceRule
        +allActiveRules(orderId: int): Collection
        +save(rule: PriceRule): void
    }

    interface BuiltinPriceRuleRepositoryInterface {
        +activeRule(strategy, orderId: int, discountValue: float): BuiltinPriceRule
        +save(rule: BuiltinPriceRule): void
    }

    interface UserRepositoryInterface {
        +findById(id: int): User
        +findByEmail(email: string): User
        +save(user: User): void
    }

    interface TokenRepositoryInterface {
        +create(user: User): string
        +revoke(token: string): void
    }
}

package "PricingStrategy" {
    class BasePriceStrategy implements PricingStrategyInterface {
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
    }

    abstract class PriceDecorator implements PricingStrategyInterface {
        #pricingStrategy: PricingStrategyInterface
        +__construct(strategy: PricingStrategyInterface)
        +activate(rule): mixed
    }

    class CategoryPricingDecorator extends PriceDecorator {
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
    }

    class LocationPricingDecorator extends PriceDecorator {
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
    }

    class SellerDiscountDecorator extends PriceDecorator {
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
    }

    class VolumeDiscountDecorator extends PriceDecorator {
        #value: float
        #type: string
        #condition_value: float
        #condition_type: string
        +__construct(strategy, discount_value, discount_type, condition_value, condition_type)
        +calculatePrice(order: Order, rule: mixed): float
        +getDescription(): string
        +getDiscountValue(): float
        +getDiscountType(): string
        +getConditionValue(): float
        +getConditionType(): string
    }
}

package "Services" {
    class PricingContext {
        -strategy: PricingStrategyInterface
        +__construct(strategy: PricingStrategyInterface)
        +getCurrentStrategy(): PricingStrategyInterface
        +setStrategy(strategy: PricingStrategyInterface): void
        +getPrice(order: Order): float
        +calculatePrice(order: Order, rule: mixed): float
    }

    class RuleEngine {
        -builtinPriceRuleRepository: BuiltinPriceRuleRepositoryInterface
        -ruleRepository: PriceRuleRepositoryInterface
        -context: PricingContext
        +__construct(ruleRepo, builtinRepo, context)
        +applyRules(order: Order): float
        -applyBuiltInDiscounts(order: Order): Order
        -checkCondition(order: Order, rule): bool
        -getDiscountValue(strategy, order): float
        -createStrategyForRule(rule): PricingStrategyInterface
    }
}

package "Models" {
    class Order {
        -id: int
        -seller_id: int
        -location_id: int
        -category_id: int
        -quantity: int
        -base_price: float
        -final_price: float
        -apply_seller_discount: bool
        +seller(): BelongsTo
        +location(): BelongsTo
        +category(): BelongsTo
        +appliedRules(): BelongsToMany
        +appliedBuiltRules(): BelongsToMany
        +applyRule(rule: PriceRule, amount: float): void
        +applyBuiltRule(rule: BuiltinPriceRule, amount: float): void
        +setOptions(options: array): void
    }

    class Seller {
        -id: int
        -name: string
        -personal_discount: float
        -user_id: int
        +orders(): HasMany
        +user(): BelongsTo
    }

    class Category {
        -id: int
        -name: string
        -discount: float
    }

    class Location {
        -id: int
        -name: string
        -discount: float
    }

    class PriceRule {
        -id: int
        -rule_type: string
        -rule_name: string
        -entity_id: int
        -discount_type: string
        -discount_value: float
        -condition_type: string
        -condition_value: float
        -description: string
        +orders(): BelongsToMany
    }

    class BuiltinPriceRule {
        -id: int
        -rule_name: string
        -discount_type: string
        -discount_value: float
        -discount_amount: float
        -description: string
        +orders(): BelongsToMany
    }

    class User {
        -id: int
        -name: string
        -email: string
        -password: string
        +sellers(): HasMany
        +tokens(): HasMany
    }
}

package "Repositories" {
    class EloquentOrderRepository implements OrderRepositoryInterface
    class EloquentSellerRepository implements SellerRepositoryInterface
    class EloquentCategoryRepository implements CategoryRepositoryInterface
    class EloquentLocationRepository implements LocationRepositoryInterface
    class EloquentPriceRuleRepository implements PriceRuleRepositoryInterface
    class EloquentBuiltinPriceRuleRepository implements BuiltinPriceRuleRepositoryInterface
    class EloquentUserRepository implements UserRepositoryInterface
    class EloquentTokenRepository implements TokenRepositoryInterface
}

' Decorator chain relationships
PriceDecorator o-- PricingStrategyInterface : wraps

' Service relationships
RuleEngine --> PricingContext : uses
RuleEngine --> PriceRuleRepositoryInterface : uses
RuleEngine --> BuiltinPriceRuleRepositoryInterface : uses
PricingContext o-- PricingStrategyInterface : holds

' Model relationships
Order --> Seller
Order --> Location
Order --> Category
Order "many" -- "many" PriceRule : order_price_rules
Order "many" -- "many" BuiltinPriceRule : order_builtin_price_rules
Seller --> User

note right of RuleEngine
  Builds decorator chain:
  BasePriceStrategy
    → CategoryPricingDecorator
    → LocationPricingDecorator
    → SellerDiscountDecorator
    → VolumeDiscountDecorator (conditional)
end note

note bottom of PriceDecorator
  Open/Closed Principle:
  New pricing rule = new decorator class
  No modification of existing code
end note

@enduml
